--- a/football-app/src/components/Navbar/Navbar.module.css
+++ b/football-app/src/components/Navbar/Navbar.module.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     box-shadow: 3px 0 4px 4px #bbbbbb;
+    text-align: center;
 }
 
 .side_navbar_closed{
@@ -25,8 +26,4 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-}
-
-.button{
-    
 }
