--- a/football-app/src/components/Navbar/NavbarObject/NavbarObject.module.css
+++ b/football-app/src/components/Navbar/NavbarObject/NavbarObject.module.css
@@ -2,6 +2,7 @@
     margin-bottom:8px;
     width:100%;
     cursor: pointer;
+    padding: 10px;
 }
 
 .option:hover{
@@ -12,4 +13,6 @@
     text-decoration: none;
     outline: none;
     color: white;
+    font-size: 24px;
+    font: 1em sans-serif;
 }
