--- a/football-app/src/components/Navbar/Navbar.module.css
+++ b/football-app/src/components/Navbar/Navbar.module.css
@@ -27,3 +27,16 @@
     flex-direction: column;
     align-items: left;
 }
+
+.button{
+    border: 2px solid #adadad;
+    box-shadow: 1px 0 1px 0 #bbbbbb;
+    padding:10px;
+    background-color:aliceblue;
+    cursor:pointer;
+}
+
+.button:hover{
+    background-color:rgb(218, 218, 218);
+    box-shadow: 2px 0 2px 0 #bbbbbb;
+}
