--- a/football-app/src/components/Clubs/Club/Club.module.css
+++ b/football-app/src/components/Clubs/Club/Club.module.css
@@ -1,10 +1,39 @@
-.Club{
-    padding:10px;
-    margin:auto;
-    width:50%;
-    box-shadow: 1cm 0cm 1cm 0 #bbbbbb;
-    cursor:pointer;
+.ClubFlex{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap:10px;
+    justify-content: center;
+    border: 4px solid #242424;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
-.Club:hover{
-    box-shadow: 1cm 0cm 1cm 0 #a8a8a8; 
+
+.ClubFlex:hover{
+    background-color: #505050;
+}
+
+.ClubContent{
+    font-size: 24px;
+    width:70vw;
+    padding:10px;
+}
+
+.Buttons{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap:10px;
+    padding:5px;
+}
+
+.Button{
+    padding:10px;
+    border: 1px solid #242424;
+    background-color: #505050;
+}
+.Button:hover{
+    background-color: #14A76C;
+    cursor: pointer;
 }
